Fix color contrast on hover

--- a/src/components/DataTable.less
+++ b/src/components/DataTable.less
@@ -72,6 +72,7 @@
 }
 .DataTable__row:hover,
 .DataTable__row:nth-child(even):hover {
+	color: @font-color-1;
 	background-color: @ocean;
 }
 
